exhib - hide lg caption along with controls

--- a/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
@@ -77,3 +77,8 @@ $sub-html-padding: 40px;
         }
     }
 }
+
+// also hide gallery--work__metadata when zoom controls are hidden
+.lg-hide-items .lg-sub-html {
+    display: none;
+}
