exhib - media.file.url work around for documents
Wagtail docs are forced to download but referring to file.url
works around this, this commit's code is untested

--- a/libraries/exhibitions/templates/components/artwork.html
+++ b/libraries/exhibitions/templates/components/artwork.html
@@ -31,17 +31,24 @@ TODO: conditions for different work types (image, audio, video, embed)
     </div>
     <div class="gallery--work__video media">
         <video class="lg-video-object lg-html5" controls preload="none">
-            <source src="{{ work.media.url }}" type="video/mp4">
+            <source src="{{ work.media.file.url }}" type="video/mp4">
              Your browser does not support HTML5 video.
         </video>
     </div>
 
 {% elif work.type == 'audio' %}
+    <div class="gallery--work__audio">
     {% if work.image %}
         {% image work.image max-600x600 %}
     {% else %}
         <img src="..." alt="audio icon" />
     {% endif %}
+    </div>
+    <div class="gallery--work__audio media">
+        <audio class="lg-html5" controls src="{{ work.media.file.url }}">
+             Your browser does not support HTML5 audio.
+        </audio>
+    </div>
 
 {% endif %}
 
