--- a/libraries/exhibitions/templates/components/artwork.html
+++ b/libraries/exhibitions/templates/components/artwork.html
@@ -19,7 +19,7 @@ TODO: conditions for different work types (image, audio, video, embed)
 
 {% elif work.type == 'video' %}
 <div class="gallery--work js-gallery--work" data-sub-html=".js-caption"
-    data-html=".gallery--work__video.media">
+    data-html="#js-{{work.title|slugify}}">
     <div class="gallery--work__video">
     {% if work.image %}
         {% include 'components/ytp-btn.html' %}
@@ -29,8 +29,9 @@ TODO: conditions for different work types (image, audio, video, embed)
         <img src="..." alt="video icon" />
     {% endif %}
     </div>
-    <div class="gallery--work__video media">
-        <video class="lg-video-object lg-html5" controls preload="none">
+    <div class="gallery--work__video media" id="js-{{work.title|slugify}}">
+        <video class="lg-video-object lg-html5" controls preload="none"
+            poster="{{work.image.file.url}}">
             <source src="{{ work.media.file.url }}" type="video/mp4">
              Your browser does not support HTML5 video.
         </video>
