scss-lint, ref #60

--- a/libraries/libraries/static/scss/reset/_box-sizing.scss
+++ b/libraries/libraries/static/scss/reset/_box-sizing.scss
@@ -1,15 +1,11 @@
-/**
- * Prevent margin and border from affecting element width.
- * https://goo.gl/pYtbK7
- *
- */
-
+// Prevent margin and border from affecting element width.
+// https://goo.gl/pYtbK7
 html {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+    box-sizing: inherit;
 }
