--- a/libraries/libraries/static/scss/settings/_component-specific.scss
+++ b/libraries/libraries/static/scss/settings/_component-specific.scss
@@ -2,6 +2,6 @@
 // Component sepcific variables
 // ===================================
 
-$header-border-color: black(0.1);
+$header-border-color: black(.1);
 $header-height-small: 60px;
 $header-height-large: 80px;
