--- a/libraries/libraries/static/scss/utilities/_clearfix.scss
+++ b/libraries/libraries/static/scss/utilities/_clearfix.scss
@@ -1,8 +1,8 @@
 @mixin clearfix {
-	&:before,
-	&:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
+    &:before,
+    &:after {
+        clear: both;
+        content: '';
+        display: table;
+    }
 }
