--- a/libraries/libraries/static/scss/components/search/_search-page-search-box.scss
+++ b/libraries/libraries/static/scss/components/search/_search-page-search-box.scss
@@ -5,32 +5,31 @@
 // ==========================================
 
 .search-page-search-box {
-  background: $grey;
-  display: none;
+    background: $grey;
+    display: none;
 
-  @include respond($break-medium) {
-    display: block;
-  }
-}
+    @include respond($break-medium) {
+        display: block;
+    }
 
+    // Search page specific overrides
+    .search-box {
+        background: transparent;
+        border: 0;
+        padding: 30px 0;
+    }
 
-// Search page specific overrides
-.search-page-search-box .search-box {
-  background: transparent;
-  border: 0;
-  padding: 30px 0;
-}
+    .search-box__title {
+        display: none;
+    }
 
-.search-page-search-box .search-box__title {
-  display: none;
-}
+    // Position the results below the display of the form
+    .search-box__number-results {
+        bottom: -34px;
+        position: absolute;
+    }
 
-// Position the results below the display of the form
-.search-page-search-box .search-box__number-results {
-  bottom: -34px;
-  position: absolute;
-}
-
-.search-page-search-box .search-input {
-  max-width: 500px;
+    .search-input {
+        max-width: 500px;
+    }
 }
