--- a/libraries/libraries/static/scss/components/misc/_breadcrumb.scss
+++ b/libraries/libraries/static/scss/components/misc/_breadcrumb.scss
@@ -3,45 +3,48 @@
 // ========================================
 
 .breadcrumb {
-  margin: 0 0 20px;
-  padding: 10px 0 0;
+    margin: 0 0 20px;
+    padding: 10px 0 0;
 }
 
-  .breadcrumb__item {
+.breadcrumb__item {
     display: inline-block;
     font-size: 14px;
     line-height: 22px;
-  }
-    // vary breadcrumb color based on category
-    .page--services .breadcrumb__link {
-        border-bottom: 2px solid $blue;
-    }
-    .page--about-us .breadcrumb__link {
-        border-bottom: 2px solid $green;
-    }
-    .page--collections .breadcrumb__link {
-        border-bottom: 2px solid $purple;
-    }
+}
 
-    .breadcrumb__link {
-      color: inherit;
-      margin: 0 20px 0 0;
-      opacity: 0.8;
-      position: relative;
-      text-decoration: none;
-    }
+// vary breadcrumb color based on category
+.page--services .breadcrumb__link {
+    border-bottom: 2px solid $blue;
+}
 
-    .breadcrumb__link:hover {
-      opacity: 1;
-    }
+.page--about-us .breadcrumb__link {
+    border-bottom: 2px solid $green;
+}
 
-    .breadcrumb__link::after {
-      background-image: url('/static/images/breadcrumb-arrow.png');
-      content: '';
-      height: 14px;
-      opacity: 0.4;
-      position: absolute;
-      right: -17px;
-      top: 2px;
-      width: 9px;
-    }
+.page--collections .breadcrumb__link {
+    border-bottom: 2px solid $purple;
+}
+
+.breadcrumb__link {
+    color: inherit;
+    margin: 0 20px 0 0;
+    opacity: .8;
+    position: relative;
+    text-decoration: none;
+}
+
+.breadcrumb__link:hover {
+    opacity: 1;
+}
+
+.breadcrumb__link::after {
+    background-image: url('/static/images/breadcrumb-arrow.png');
+    content: '';
+    height: 14px;
+    opacity: .4;
+    position: absolute;
+    right: -17px;
+    top: 2px;
+    width: 9px;
+}
