--- a/libraries/libraries/static/scss/components/search/_search-list.scss
+++ b/libraries/libraries/static/scss/components/search/_search-list.scss
@@ -3,14 +3,13 @@
 // ===========================================
 
 .search-list {
-  border-top: 1px solid black(0.1);
-  padding: 20px 0;
+    border-top: 1px solid black(.1);
+    padding: 20px 0;
 
-  @include respond($break-medium) {
-    border-top: 0;
-
-    // offset absolutly positioned
-    // .search-box__number-results
-    padding-top: 60px;
-  }
+    @include respond($break-medium) {
+        border-top: 0;
+        // offset absolutly positioned
+        // .search-box__number-results
+        padding-top: 60px;
+    }
 }
